# TRXASprefitpack

./: .gitignore  .gitmodules  .readthedocs.yaml  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  README.txt  TODO.txt  asymp.py  fit_tscan_gui.py  gen_doc.py  gen_setup.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.template  test_driver_transient_exp_2.h5  test_driver_transient_exp_3.h5  test_driver_transient_exp_4.h5  test_driver_transient_exp_t0_4.h5  version.txt
.circleci/: config.yml
.github/: dependabot.yml
doc/: TRXASprefitpack.doc.rst  TRXASprefitpack.rst
docs/: auto_scale.md  conf.py  requirements.txt
docs_txt/: TRXASprefitpack_info.txt  auto_scale.txt  automate_scaling.txt  broadening.txt  compute_model.txt  compute_signal_cauchy.txt  compute_signal_gau.txt  compute_signal_pvoigt.txt  corr_a_method.txt  description.txt  doc_list.txt  exp_conv_cauchy.txt  exp_conv_gau.txt  fact_anal_exp_conv.txt  fit_static.txt  fit_tscan.txt  gen_theory_data.txt  lgpl-3.0.txt  licence.txt  licence.txt~  model_n_comp_conv.txt  solve_model.txt  structure.txt
test/: __init__.py  test_ampgo.py  test_fact_anal.py  test_grad_dmp_osc_conv_irf.py  test_grad_exp_conv_irf.py  test_grad_res.py  test_grad_res_transient.py  test_irf.py
test-results/: junit.xml
tests/: requirements.txt  test_ampgo.py  test_dmp_osc_conv_irf.py  test_driver_ads.py  test_driver_static.py  test_driver_static_thy_1_shgo.py  test_driver_static_thy_2_shgo.py  test_driver_static_voigt_1.py  test_driver_static_voigt_1_shgo.py  test_driver_static_voigt_2_shgo.py  test_driver_transient.py  test_driver_transient_both_1.py  test_driver_transient_both_2.py  test_driver_transient_both_3.py  test_driver_transient_both_4.py  test_driver_transient_both_5.py  test_driver_transient_both_6.py  test_driver_transient_dmp_osc_1.py  test_driver_transient_dmp_osc_1_shgo.py  test_driver_transient_dmp_osc_2.py  test_driver_transient_dmp_osc_2_shgo.py  test_driver_transient_dmp_osc_3.py  test_driver_transient_dmp_osc_3_shgo.py  test_driver_transient_dmp_osc_4.py  test_driver_transient_dmp_osc_4_shgo.py  test_driver_transient_dmp_osc_5.py  test_driver_transient_dmp_osc_5_shgo.py  test_driver_transient_dmp_osc_6.py  test_driver_transient_dmp_osc_6_shgo.py  test_driver_transient_exp_1.py  test_driver_transient_exp_1_shgo.py  test_driver_transient_exp_2_shgo.py  test_driver_transient_exp_3_shgo.py  (+25 more)
(+128 files in other folders)
