[metadata]
name = TRXASprefitpack
version =  attr: TRXASprefitpack.__version__
description = package for TRXAS pre-fitting process
long_description = file: README.md
long_description_content_type = text/markdown
author = Junho Lee (pistack)
author_email = pistack@yonsei.ac.kr
url = https://github.com/pistack/TRXASprefitpack
license = LGPLv3
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
 
[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    numpy >= 1.13.0
    scipy >= 1.4.0
    matplotlib
    lmfit >= 1.0.0
    
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    match_scale = TRXASprefitpack.tools:match_scale
    calc_broad = TRXASprefitpack.tools:calc_broad
    calc_dads = TRXASprefitpack.tools:calc_dads
    calc_sads = TRXASprefitpack.tools:calc_sads
    fit_static = TRXASprefitpack.tools:fit_static
    fit_irf = TRXASprefitpack.tools:fit_irf
    fit_tscan = TRXASprefitpack.tools:fit_tscan
    fit_seq = TRXASprefitpack.tools:fit_seq
    fit_eq = TRXASprefitpack.tools:fit_eq
    fit_osc = TRXASprefitpack.tools:fit_osc
